[package]
name = "uethers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = "0.11.1"
serde = { version = "1", features = ["derive"] }
ureq = { version = "2.4.0", features = ["json"] }