[package]
name = "uethers"
version = "0.1.0"
authors = ["Guanqun Lu <guanqunlu@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/uethers"
repository = "https://github.com/guanqun/uethers"
homepage = "https://docs.rs/uethers"
description = "Minimal Ethereum library in Rust."
keywords = ["ethereum"]


[dependencies]
hex = "0.4.3"
primitive-types = { version = "0.11.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
ureq = { version = "2.4.0", features = ["json"] }